PLANET-7314: Fix Page Header on small screens (#1173)
Ref: https://jira.greenpeace.org/browse/PLANET-7314

- Remove the min-width property since seems not be necessary in this case

--- a/assets/src/styles/blocks/PageHeader.scss
+++ b/assets/src/styles/blocks/PageHeader.scss
@@ -6,7 +6,6 @@ $text-column-padding-in: 24px;
 
 .wp-block-media-text.alignfull.is-pattern-p4-page-header {
   grid-template-columns: 100%;
-  min-width: 360px;
   width: 100vw;
   padding: $sp-6 0;
 
